test/binCases/errors/issue-5576/test.opts
a
bundle.js
--mode production

